--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.3",
+    "@react-native-firebase/app": "^16.3.1",
+    "@react-native-firebase/database": "^16.3.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-location": "^14.3.0",
     "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-element-dropdown": "^2.3.1",
